--- a/index.html
+++ b/index.html
@@ -1,32 +1,94 @@
 <html lang="en">
+    <title>MemeBen</title>
     <head>
+        <link rel="">
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="animation.css">
     </head>
     <body>
         <header>
-            <img class="logo" src="logo.png" height="90px"></img>
+            <img class="logo" src="logo.png" height="100px"></img>
             <korone>
                 <img class="name" src="inu.png" width="200px"></img>
-                <img class="korone" src="korone.png" height="150px"></img>
+                <img class="korone" src="news/korone.png" height="150px"></img>
             </korone>
         </header>
         <banner>
-            <st><img class="koron_ban" src="banner.png" width="1200px"></img></st>
+            <st><img class="koron_ban" src="banner/banner.png" width="1200px"></img></st>
         </banner>
-        <favtext>
+        <headers>
             <st2><h1><txt>my favorites</txt></h1></st2>
-        </favtext>
+        </headers>
         <favorites>
-            <st2><img class="card" src="shizuko.png" width="300px"><name>Kawawa Shizuko</name><tagpl><tag>favorite character</tag></tagpl></img></st2>
-            <st2><img class="card" src="kotone.png" width="300px"><name>Fujita Kotone</name><tagpl><tag>favorite character</tag></tagpl></img></st2>
-            <st2><img class="card" src="korone-ban.png" width="300px"><name>inugami korone</name><tagpl><tag>favorite vtuber</tag></tagpl></img></st2>
-            <st2><img class="card" src="nana.png" width="300px"><name>nanahira</name><tagpl><tag>favorite artist</tag></tagpl></img></st2>
+            <a href="https://bluearchive.wiki/wiki/Shizuko">
+                <st2>
+                    <img class="card" src="cards/shizuko.png" width="300px">
+                        <name>Kawawa Shizuko</name>
+                        <tagpl>
+                            <tag>favorite character</tag>
+                        </tagpl>
+                    </img>
+                </st2>
+            </a>
+            <a href="https://project-imas.wiki/Kotone_Fujita">
+                <st2>
+                    <img class="card" src="cards/kotone.png" width="300px">
+                        <name>Fujita Kotone</name>
+                        <tagpl>
+                            <tag>favorite character</tag>
+                        </tagpl>
+                    </img>
+                </st2>
+            </a>
+            <a href="https://www.youtube.com/channel/UChAnqc_AY5_I3Px5dig3X1Q">
+                <st2>
+                    <img class="card" src="cards/korone-ban.png" width="300px">
+                        <name>inugami korone</name>
+                        <tagpl>
+                            <tag>favorite vtuber</tag>
+                        </tagpl>
+                    </img>
+                </st2>
+            </a>
+            <a href="https://nanahira.jp/">
+                <st2>
+                    <img class="card" src="cards/nana.png" width="300px">
+                        <name>nanahira</name>
+                        <tagpl>
+                            <tag>favorite artist</tag>
+                        </tagpl>
+                    </img>
+                </st2>
+            </a>
         </favorites>
+        <headers>
+            <st3><h1><txt>news</txt></h1></st3>
+        </headers>
+        <news>
+            <nn>
+            <new-box>
+                <ev>
+                    <img class="rigth" src="news/korone.png" width="150px">
+                </ev>
+                <time>23.03.2025</time>
+                <ttt>
+                    <main-txt>Make Site!</main-txt>
+                </ttt>
+            </new-box>
+            </nn>
+            <a href="https://osu.ppy.sh/community/forums/topics/2045815">
+            <new-box>
+                <ev>
+                    <img class="rigth" src="news/gb.png" width="150px">
+                </ev>
+                <time>25.02.2025</time>
+                <ttt>
+                    <main-txt>Partici pation at GBC</main-txt>
+                </ttt>
+            </new-box></a>
         <footer>
-            <warning>
-                All rights is owned by artist/people that make that, i'm isn't getting any rights.<br>@memeben
-            </warning>
+            <span text="All rights is owned by artist/people that make that, i'm isn't getting any rights."></span><h2></h2>
+            <span text="@MemeBen | Don't have any rights :("></span>
         </footer>
     </body>
 </html>
