--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
-    <title>MemeBen</title>
+    <title>MemeBen | Mania Player</title>
     <head>
-        <link rel="">
+        <link rel="icon" href="memeben.ico" type="image/x-icon">
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="animation.css">
     </head>
