--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <headers>
             <st3><h1><txt>news</txt></h1></st3>
         </headers>
+        <fl>
         <news>
             <nn>
             <new-box>
@@ -86,6 +87,7 @@
                     <main-txt>Partici pation at GBC</main-txt>
                 </ttt>
             </new-box></a>
+        </news></fl>
         <footer>
             <span text="All rights is owned by artist/people that make that, i'm isn't getting any rights."></span><h2></h2>
             <span text="@MemeBen | Don't have any rights :("></span>
