--- a/index.html
+++ b/index.html
@@ -17,80 +17,142 @@
             <st><img class="koron_ban" src="banner/banner.png" width="1200px"></img></st>
         </banner>
         <headers>
-            <st2><h1><txt>my favorites</txt></h1></st2>
+            <st2><h1><txt>news</txt></h1></st2>
         </headers>
-        <favorites>
+        <fl>
+        <news>
+            <st3>
+                <nn><new-box>
+                    <ev>
+                        <img class="rigth" src="news/korone.png" width="150px">
+                    </ev>
+                    <time>24.03.2025</time>
+                    <ttt>
+                        <main-txt>First Update</main-txt>
+                    </ttt>
+                </new-box></nn>
+            </st3>
+            <st3>
+                <nn><new-box>
+                    <ev>
+                        <img class="rigth" src="news/korone.png" width="150px">
+                    </ev>
+                    <time>23.03.2025</time>
+                    <ttt>
+                        <main-txt>Make Site!</main-txt>
+                    </ttt>
+                </new-box></nn>
+            </st3>
+            <st3>
+                <a href="https://osu.ppy.sh/community/forums/topics/2045815">
+                <new-box>
+                    <ev>
+                        <img class="rigth" src="news/gb.png" width="150px">
+                    </ev>
+                    <time>25.02.2025</time>
+                    <ttt>
+                        <main-txt>Partici pation at GBC</main-txt>
+                    </ttt>
+                </new-box></a>
+            </st3>
+        </news></fl>
+        <headers>
+            <st3><h1><txt>osu! information</txt></h1></st3>
+        </headers>
+        <st4><osu>
+            <leftsid>
+                <profile>
+                    <a href="https://osu.ppy.sh/users/18171966"><img class="avatar" src="https://a.ppy.sh/18171966?1700676265.jpeg" width="150px"></img></a>
+                    <a href="https://osu.ppy.sh/users/18171966"><blkinfo>
+                        <info>
+                            <inftxt>MemeBen</inftxt>
+                        </info>
+                        <stats>
+                            <statstxt>Mode: </statstxt><img class="icon" src="icons/mania.png" width="25px"></img><statstxt> | Main Skillset: Rice</statstxt>
+                        </stats>
+                    </blkinfo></a>
+                </profile>
+                <fav>
+                    <dantitle>Favorite Map</dantitle>
+                    <a href="https://osu.ppy.sh/beatmapsets/2062447">
+                    <danbox style="--bg-image: url('dan/87954130_p0.jpg');">
+                        <map>
+                            <tit>They're again&again</tit>
+                            <tit>- t+pazolite & Nanahira</tit>
+                            <com>Beatmap by Chilly-</com>
+                        </map>
+                    </danbox></a>
+                </fav>
+            </leftsid>
+            <dans>
+                <dantitle>Completed Dans</dantitle>
+                <a href="https://ibb.co/BFgwL43">
+                <danbox style="--bg-image: url('dan/D10.jpg');">
+                    <map>
+                        <tit>Dan ~ REFORM ~ 2nd Pack</tit>
+                        <tit>[~ 10th ~ (Marathon)]</tit>
+                        <com>97.15% | 05.11.2024</com>
+                    </map>
+                </danbox></a>
+                <a href="https://ibb.co/LhcqQJQR">
+                <danbox style="--bg-image: url('dan/Dan_9.png');">
+                    <map>
+                        <tit>4K Shoegazer Dans</tit>
+                        <tit>[9th Dan v2]</tit>
+                        <com>96.80% | 07.08.2024</com>
+                    </map>
+                </danbox></a>
+                <a href="https://ibb.co/V0W7r9p4">
+                <danbox style="--bg-image: url('dan/q9 slts.jpg');">
+                    <map>
+                        <tit>4K Thumb Dan - C Pack</tit>
+                        <tit>[9th - Oyasumi (Shiggy Jr) 222]</tit>
+                        <com>98.04% | 05.02.2025</com>
+                    </map>
+                </danbox></a>
+            </dans>
+        </osu></st4>
+        <headers>
+            <st5><h1><txt>my favorites</txt></h1></st5>
+        </headers>
+        <st6><favorites>
             <a href="https://bluearchive.wiki/wiki/Shizuko">
-                <st2>
+                
                     <img class="card" src="cards/shizuko.png" width="300px">
                         <name>Kawawa Shizuko</name>
                         <tagpl>
                             <tag>favorite character</tag>
                         </tagpl>
                     </img>
-                </st2>
             </a>
             <a href="https://project-imas.wiki/Kotone_Fujita">
-                <st2>
                     <img class="card" src="cards/kotone.png" width="300px">
                         <name>Fujita Kotone</name>
                         <tagpl>
                             <tag>favorite character</tag>
                         </tagpl>
                     </img>
-                </st2>
             </a>
             <a href="https://www.youtube.com/channel/UChAnqc_AY5_I3Px5dig3X1Q">
-                <st2>
                     <img class="card" src="cards/korone-ban.png" width="300px">
                         <name>inugami korone</name>
                         <tagpl>
                             <tag>favorite vtuber</tag>
                         </tagpl>
                     </img>
-                </st2>
             </a>
             <a href="https://nanahira.jp/">
-                <st2>
                     <img class="card" src="cards/nana.png" width="300px">
                         <name>nanahira</name>
                         <tagpl>
                             <tag>favorite artist</tag>
                         </tagpl>
                     </img>
-                </st2>
             </a>
-        </favorites>
-        <headers>
-            <st3><h1><txt>news</txt></h1></st3>
-        </headers>
-        <fl>
-        <news>
-            <nn>
-            <new-box>
-                <ev>
-                    <img class="rigth" src="news/korone.png" width="150px">
-                </ev>
-                <time>23.03.2025</time>
-                <ttt>
-                    <main-txt>Make Site!</main-txt>
-                </ttt>
-            </new-box>
-            </nn>
-            <a href="https://osu.ppy.sh/community/forums/topics/2045815">
-            <new-box>
-                <ev>
-                    <img class="rigth" src="news/gb.png" width="150px">
-                </ev>
-                <time>25.02.2025</time>
-                <ttt>
-                    <main-txt>Partici pation at GBC</main-txt>
-                </ttt>
-            </new-box></a>
-        </news></fl>
+        </favorites></st6>
         <footer>
-            <span text="All rights is owned by artist/people that make that, i'm isn't getting any rights."></span><h2></h2>
-            <span text="@MemeBen | Don't have any rights :("></span>
+            <span text="All rights is owned by artist/people that make that, i'm isn't getting any rights."></span>
+            <span text="@MemeBen - Don't have any rights :("></span>
         </footer>
     </body>
 </html>
