Update (First) Second Part

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <title>MemeBen | Mania Player</title>
     <head>
         <link rel="icon" href="memeben.ico" type="image/x-icon">
+        <link rel="stylesheet" href="fonts.css">
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="animation.css">
     </head>
@@ -59,8 +60,8 @@
         <headers>
             <st3><h1><txt>osu! information</txt></h1></st3>
         </headers>
-        <st4><osu>
-            <leftsid>
+        <osu>
+            <st4><leftsid>
                 <profile>
                     <a href="https://osu.ppy.sh/users/18171966"><img class="avatar" src="https://a.ppy.sh/18171966?1700676265.jpeg" width="150px"></img></a>
                     <a href="https://osu.ppy.sh/users/18171966"><blkinfo>
@@ -83,8 +84,8 @@
                         </map>
                     </danbox></a>
                 </fav>
-            </leftsid>
-            <dans>
+            </leftsid></st4>
+            <st4><dans>
                 <dantitle>Completed Dans</dantitle>
                 <a href="https://ibb.co/BFgwL43">
                 <danbox style="--bg-image: url('dan/D10.jpg');">
@@ -110,46 +111,86 @@
                         <com>98.04% | 05.02.2025</com>
                     </map>
                 </danbox></a>
-            </dans>
-        </osu></st4>
+            </dans></st4>
+        </osu>
         <headers>
-            <st5><h1><txt>my favorites</txt></h1></st5>
+            <st5><h1><txt>Recent tournaments</txt></h1></st5>
         </headers>
-        <st6><favorites>
-            <a href="https://bluearchive.wiki/wiki/Shizuko">
-                
-                    <img class="card" src="cards/shizuko.png" width="300px">
-                        <name>Kawawa Shizuko</name>
-                        <tagpl>
-                            <tag>favorite character</tag>
-                        </tagpl>
-                    </img>
-            </a>
-            <a href="https://project-imas.wiki/Kotone_Fujita">
-                    <img class="card" src="cards/kotone.png" width="300px">
-                        <name>Fujita Kotone</name>
-                        <tagpl>
-                            <tag>favorite character</tag>
-                        </tagpl>
-                    </img>
-            </a>
-            <a href="https://www.youtube.com/channel/UChAnqc_AY5_I3Px5dig3X1Q">
-                    <img class="card" src="cards/korone-ban.png" width="300px">
-                        <name>inugami korone</name>
-                        <tagpl>
-                            <tag>favorite vtuber</tag>
-                        </tagpl>
-                    </img>
-            </a>
-            <a href="https://nanahira.jp/">
-                    <img class="card" src="cards/nana.png" width="300px">
-                        <name>nanahira</name>
-                        <tagpl>
-                            <tag>favorite artist</tag>
-                        </tagpl>
-                    </img>
-            </a>
-        </favorites></st6>
+        <tour>
+            <st6><tourbox>
+                <abbr>SMMT 26</abbr>
+                <res style="--result-color:#f36983;">Lose</res>
+                <lstxt></lstxt>
+                <last>
+                    <vs>MemeBen | weirdoooooo</vs>
+                    <vs>0 : 3</vs>
+                </last>
+            </tourbox></st6>
+            <st6><tourbox>
+                <abbr>WOGST</abbr>
+                <res style="--result-color:#f36983;">Lose</res>
+                <lstxt></lstxt>
+                <last>
+                    <vs>bumk | MemeBen</vs>
+                    <vs>5 : 3</vs>
+                </last>
+            </tourbox></st6>
+            <st6><tourbox>
+                <abbr>SMMT 25</abbr>
+                <res style="--result-color:#f36983;">Lose</res>
+                <lstxt></lstxt>
+                <last>
+                    <vs>MemeBen | OtecYarika</vs>
+                    <vs>0 : 3</vs>
+                </last>
+            </tourbox></st6>
+            <st6><tourbox>
+                <abbr>SMMT 24</abbr>
+                <res style="--result-color:#f36983;">Lose</res>
+                <lstxt></lstxt>
+                <last>
+                    <vs>MemeBen | Omega_A</vs>
+                    <vs>1 : 3</vs>
+                </last>
+            </tourbox></st6>
+        </tour>
+        <headers>
+            <st7><h1><txt>my favorites</txt></h1></st7>
+        </headers>
+        <favorites>
+            <st8><a href="https://bluearchive.wiki/wiki/Shizuko">
+                <img class="card" src="cards/shizuko.png" width="300px">
+                    <name>Kawawa Shizuko</name>
+                    <tagpl>
+                        <tag>favorite character</tag>
+                    </tagpl>
+                </img>
+            </a></st8>
+            <st8><a href="https://project-imas.wiki/Kotone_Fujita">
+                <img class="card" src="cards/kotone.png" width="300px">
+                    <name>Fujita Kotone</name>
+                    <tagpl>
+                        <tag>favorite character</tag>
+                    </tagpl>
+                </img>
+            </a></st8>
+            <st8><a href="https://www.youtube.com/channel/UChAnqc_AY5_I3Px5dig3X1Q">
+                <img class="card" src="cards/korone-ban.png" width="300px">
+                    <name>inugami korone</name>
+                    <tagpl>
+                        <tag>favorite vtuber</tag>
+                    </tagpl>
+                </img>
+            </a></st8>
+            <st8><a href="https://nanahira.jp/">
+                <img class="card" src="cards/nana.png" width="300px">
+                    <name>nanahira</name>
+                    <tagpl>
+                        <tag>favorite artist</tag>
+                    </tagpl>
+                </img>
+            </a></st8>
+        </favorites>
         <footer>
             <span text="All rights is owned by artist/people that make that, i'm isn't getting any rights."></span>
             <span text="@MemeBen - Don't have any rights :("></span>
