--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </korone>
         </header>
         <banner>
-            <st><img class="koron_ban" src="banner/banner.png" width="1200px"></img></st>
+            <st><img class="koron_ban" src="banner/banner.png"></img></st>
         </banner>
         <headers>
             <st2><h1><txt>news</txt></h1></st2>
@@ -43,6 +43,18 @@
                         <main-txt>Make Site!</main-txt>
                     </ttt>
                 </new-box></nn>
+            </st3>
+            <st3>
+                <a href="https://osu.ppy.sh/community/forums/topics/2045040">
+                <new-box>
+                    <ev>
+                        <img class="rigth" src="news/DnB.png" width="150px">
+                    </ev>
+                    <time>25.02.2025</time>
+                    <ttt>
+                        <main-txt>Partici pation at DnB</main-txt>
+                    </ttt>
+                </new-box></a>
             </st3>
             <st3>
                 <a href="https://osu.ppy.sh/community/forums/topics/2045815">
