Add Tour History v1

--- a/index.html
+++ b/index.html
@@ -130,6 +130,15 @@
         </headers>
         <tour>
             <st6><tourbox>
+                <abbr>4NPF #10</abbr>
+                <res style="--result-color:#f36983;">Lose</res>
+                <lstxt></lstxt>
+                <last>
+                    <vs>MemeBen | OtecYarika</vs>
+                    <vs>1 : 2</vs>
+                </last>
+            </tourbox></st6>
+            <st6><tourbox>
                 <abbr>SMMT 26</abbr>
                 <res style="--result-color:#f36983;">Lose</res>
                 <lstxt></lstxt>
