Player Showcase Update

--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
                     <ev>
                         <img class="rigth" src="news/korone.png" width="150px">
                     </ev>
+                    <time>02.04.2025</time>
+                    <ttt>
+                        <main-txt>Adding Player Show case</main-txt>
+                    </ttt>
+                </new-box></nn>
+            </st3>
+            <st3>
+                <nn><new-box>
+                    <ev>
+                        <img class="rigth" src="news/korone.png" width="150px">
+                    </ev>
                     <time>24.03.2025</time>
                     <ttt>
                         <main-txt>First Update</main-txt>
@@ -124,12 +135,18 @@
                     </map>
                 </danbox></a>
             </dans></st4>
+            <headers>
+                <st5><h1><txt>Player Showcase</txt></h1></st5>
+            </headers>
+            <vid>
+                <st6><iframe width="1200" height="674" src="https://www.youtube.com/embed/8BP-WAakP40?si=CCnqCiMhyQ6EMOIO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></st6>
+            </vid>
         </osu>
         <headers>
-            <st5><h1><txt>Recent tournaments</txt></h1></st5>
+            <st7><h1><txt>Recent tournaments</txt></h1></st7>
         </headers>
         <tour>
-            <st6><tourbox>
+            <st8><tourbox>
                 <abbr>4NPF #10</abbr>
                 <res style="--result-color:#f36983;">Lose</res>
                 <lstxt></lstxt>
@@ -137,8 +154,8 @@
                     <vs>MemeBen | OtecYarika</vs>
                     <vs>1 : 2</vs>
                 </last>
-            </tourbox></st6>
-            <st6><tourbox>
+            </tourbox></st8>
+            <st8><tourbox>
                 <abbr>SMMT 26</abbr>
                 <res style="--result-color:#f36983;">Lose</res>
                 <lstxt></lstxt>
@@ -146,8 +163,8 @@
                     <vs>MemeBen | weirdoooooo</vs>
                     <vs>0 : 3</vs>
                 </last>
-            </tourbox></st6>
-            <st6><tourbox>
+            </tourbox></st8>
+            <st8><tourbox>
                 <abbr>WOGST</abbr>
                 <res style="--result-color:#f36983;">Lose</res>
                 <lstxt></lstxt>
@@ -155,8 +172,8 @@
                     <vs>bumk | MemeBen</vs>
                     <vs>5 : 3</vs>
                 </last>
-            </tourbox></st6>
-            <st6><tourbox>
+            </tourbox></st8>
+            <st8><tourbox>
                 <abbr>SMMT 25</abbr>
                 <res style="--result-color:#f36983;">Lose</res>
                 <lstxt></lstxt>
@@ -164,8 +181,8 @@
                     <vs>MemeBen | OtecYarika</vs>
                     <vs>0 : 3</vs>
                 </last>
-            </tourbox></st6>
-            <st6><tourbox>
+            </tourbox></st8>
+            <st8><tourbox>
                 <abbr>SMMT 24</abbr>
                 <res style="--result-color:#f36983;">Lose</res>
                 <lstxt></lstxt>
@@ -173,44 +190,44 @@
                     <vs>MemeBen | Omega_A</vs>
                     <vs>1 : 3</vs>
                 </last>
-            </tourbox></st6>
+            </tourbox></st8>
         </tour>
         <headers>
-            <st7><h1><txt>my favorites</txt></h1></st7>
+            <st9><h1><txt>my favorites</txt></h1></st9>
         </headers>
         <favorites>
-            <st8><a href="https://bluearchive.wiki/wiki/Shizuko">
+            <st10><a href="https://bluearchive.wiki/wiki/Shizuko">
                 <img class="card" src="cards/shizuko.png" width="300px">
                     <name>Kawawa Shizuko</name>
                     <tagpl>
                         <tag>favorite character</tag>
                     </tagpl>
                 </img>
-            </a></st8>
-            <st8><a href="https://project-imas.wiki/Kotone_Fujita">
+            </a></st10>
+            <st10><a href="https://project-imas.wiki/Kotone_Fujita">
                 <img class="card" src="cards/kotone.png" width="300px">
                     <name>Fujita Kotone</name>
                     <tagpl>
                         <tag>favorite character</tag>
                     </tagpl>
                 </img>
-            </a></st8>
-            <st8><a href="https://www.youtube.com/channel/UChAnqc_AY5_I3Px5dig3X1Q">
+            </a></st10>
+            <st10><a href="https://www.youtube.com/channel/UChAnqc_AY5_I3Px5dig3X1Q">
                 <img class="card" src="cards/korone-ban.png" width="300px">
                     <name>inugami korone</name>
                     <tagpl>
                         <tag>favorite vtuber</tag>
                     </tagpl>
                 </img>
-            </a></st8>
-            <st8><a href="https://nanahira.jp/">
+            </a></st10>
+            <st10><a href="https://nanahira.jp/">
                 <img class="card" src="cards/nana.png" width="300px">
                     <name>nanahira</name>
                     <tagpl>
                         <tag>favorite artist</tag>
                     </tagpl>
                 </img>
-            </a></st8>
+            </a></st10>
         </favorites>
         <footer>
             <span text="All rights is owned by artist/people that make that, i'm isn't getting any rights."></span>
