Update for mobile

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <st5><h1><txt>Player Showcase</txt></h1></st5>
             </headers>
             <vid>
-                <st6><iframe width="1200" height="674" src="https://www.youtube.com/embed/8BP-WAakP40?si=CCnqCiMhyQ6EMOIO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></st6>
+                <st6><video width="100%" height="auto" src="https://www.dropbox.com/scl/fi/36noax80usjcqi073731l/Player-Showcase.mp4?rlkey=loeigz0rgbrvhufprqv6qw3yd&st=xhg9d7ut&dl=0&raw=1" controls></video></iframe></st6>
             </vid>
         </osu>
         <headers>
@@ -196,6 +196,14 @@
             <st9><h1><txt>my favorites</txt></h1></st9>
         </headers>
         <favorites>
+            <st10><a href="https://www.youtube.com/channel/UChAnqc_AY5_I3Px5dig3X1Q">
+                <img class="card" src="cards/korone-ban.png" height="270px">
+                    <name>inugami korone</name>
+                    <tagpl>
+                        <tag>favorite vtuber</tag>
+                    </tagpl>
+                </img>
+            </a></st10>
             <st10><a href="https://bluearchive.wiki/wiki/Shizuko">
                 <img class="card" src="cards/shizuko.png" width="300px">
                     <name>Kawawa Shizuko</name>
@@ -209,14 +217,6 @@
                     <name>Fujita Kotone</name>
                     <tagpl>
                         <tag>favorite character</tag>
-                    </tagpl>
-                </img>
-            </a></st10>
-            <st10><a href="https://www.youtube.com/channel/UChAnqc_AY5_I3Px5dig3X1Q">
-                <img class="card" src="cards/korone-ban.png" width="300px">
-                    <name>inugami korone</name>
-                    <tagpl>
-                        <tag>favorite vtuber</tag>
                     </tagpl>
                 </img>
             </a></st10>
